[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unison-heartbeat"
version = "0.1.0"
description = "Unison sync agent with heartbeat-based health detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["unison_heartbeat*"]
